package light;

public interface ICommand {
    public void switchChange();
    public String getStatus();
}
